--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,13 @@ services:
     build: .
     image: ghcr.io/adityathebe/restic-exporter:latest
     environment:
-      - RESTIC_REPOSITORY=/data
-      - RESTIC_PASSWORD=<password_here>
-      # - RESTIC_PASSWORD_FILE=/restic_password_file
-      # - REFRESH_INTERVAL=1800
-      # - LISTEN_PORT=8001
+      RESTIC_REPOSITORY: ${RESTIC_REPOSITORY:-/data}
+      RESTIC_PASSWORD: ${RESTIC_PASSWORD:-}
+      B2_ACCOUNT_ID: ${B2_ACCOUNT_ID:-}
+      B2_ACCOUNT_KEY: ${B2_ACCOUNT_KEY:-}
+      REFRESH_INTERVAL: ${REFRESH_INTERVAL:-1800}
+      LISTEN_PORT: ${LISTEN_PORT:-8001}
+      LOG_LEVEL: DEBUG
     ports:
       - '8001:8001'
-    volumes:
-      - /host_path/restic/data:/data
-      # - /host_path/restic/password_file:/restic_password_file:ro
     restart: unless-stopped
